GlobalException 추가(auth클래스)